@@ -28,6 +28,7 @@
 17. Disable volume fade on stop by default - this is really something MPD
     itself should implement.
 18. Remove 'Add albums in random order' from view context menus.
+19. Reorganize playqueue context menu.
 
 1.4.1
 -----
